# Fishing

./: 1.txt  138.txt  2.txt  25.txt  6.txt  74.txt  9.txt  CMakeLists.txt  Makefile  README.md  board01.txt  board02.txt  board03.txt  board04.txt  board05.txt  board06.txt  board07.txt  board08.txt  board09.txt  check_parameters.c  check_parameters.h  choose_penguin.c  choose_penguin.h  data_structures.c  data_structures.h  destination_legality_check.c  destination_legality_check.h  destination_validity_check.c  floe_availability_check.c  floe_availability_check.h  gamestate_generator.c  gamestate_generator.h  get_destination_coordinates.c  get_destination_coordinates.h  get_penguin_coordinates.c  get_penguin_coordinates.h  get_placement_coordinates.c  get_placement_coordinates.h  main.c  main_loop_draft  (+38 more)
